--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "babel-core": "6.26.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-react-app": "^3.1.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-preset-react-app": "3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "extract-text-webpack-plugin": "3.0.2",
@@ -24,21 +24,22 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "8.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "prop-types": "^15.6.2",
+    "prop-types": "15.6.2",
     "raf": "3.4.0",
-    "react": "^16.5.2",
-    "react-dev-utils": "^5.0.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
+    "react": "16.5.2",
+    "react-dev-utils": "5.0.2",
+    "react-dom": "16.5.2",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.3.1",
+    "recompose": "^0.30.0",
+    "redux": "4.0.0",
+    "redux-persist": "5.10.0",
+    "redux-thunk": "2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -100,12 +101,14 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-watch": "^4.0.2"
+    "babel-eslint": "7.2.3",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-watch": "4.0.2",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0"
   }
 }
